--- a/src/app/modules/profile/profile-view/profile.component.scss
+++ b/src/app/modules/profile/profile-view/profile.component.scss
@@ -36,7 +36,7 @@
 			@apply text-sm leading-normal mt-0 mb-2 text-gray-400 font-bold;
 
 			i {
-				@apply mr-2 text-sm text-gray-400;
+				@apply mr-2 text-sm text-gray-400 font-bold;
 			}
 		}
 	}
