--- a/src/app/modules/about/about.component.scss
+++ b/src/app/modules/about/about.component.scss
@@ -1,3 +1,47 @@
 h2 {
 	@apply xl:w-8/12 lg:w-10/12 w-full font-bold text-gray-800 dark:text-white lg:text-2xl text-lg lg:leading-10 leading-9 mt-2;
 }
+
+.containers {
+	@apply 2xl:container 2xl:mx-auto lg:py-16 lg:px-20 md:py-12 md:px-6 py-9 px-4;
+
+	.header {
+		@apply lg:w-10/12 w-full;
+
+		&-title {
+			@apply text-sm leading-3 font-bold text-gray-700 dark:text-gray-500 hover:text-gray-800 cursor-pointer;
+		}
+
+		.subtitle {
+			@apply font-normal text-base leading-6 text-gray-600 dark:text-white mt-6;
+		}
+	}
+
+	.content {
+		@apply lg:mt-16 sm:mt-12 mt-16 flex lg:flex-row justify-between flex-col lg:gap-8 gap-12;
+	}
+
+	.images-wrapper {
+		@apply lg:flex items-center w-full lg:w-1/2;
+	}
+
+	.images-lg {
+		@apply lg:block hidden w-full rounded-lg;
+	}
+
+	.images-sm {
+		@apply lg:hidden sm:block hidden w-full h-3/4 rounded-lg;
+	}
+
+	.images {
+		@apply sm:hidden block w-full rounded-lg;
+	}
+
+	.wrapper-text {
+		@apply w-full xl:w-5/12 lg:w-6/12;
+
+		.text {
+			@apply font-normal text-base leading-6 text-gray-600;
+		}
+	}
+}
