--- a/src/app/modules/home/components/contact-section/contact-section.component.html
+++ b/src/app/modules/home/components/contact-section/contact-section.component.html
@@ -1,31 +1,30 @@
-<section class="text-gray-600 body-font relative">
-  <div class="absolute inset-0 bg-gray-300">
+<section>
+  <div class="maps-wrapper">
     <iframe style="filter: grayscale(1) contrast(1.2) opacity(0.4);" marginheight="0" marginwidth="0" title="map"
       scrolling="no"
       src="https://maps.google.com/maps?width=100%&height=600&hl=en&q=-6.8938371908652885, 106.79983021947811&ie=UTF8&t=&z=14&iwloc=B&output=embed"
       width="100%" height="100%" frameborder="0"></iframe>
   </div>
-  <div class="container px-5 py-24 mx-auto flex">
+  <div class="form-wrapper">
     <form [formGroup]="form">
-      <div
-        class="lg:w-1/3 md:w-1/2 bg-white rounded-lg p-8 flex flex-col md:ml-auto w-full mt-10 md:mt-0 relative z-10 shadow-md">
-        <h2 class="text-gray-900 text-lg mb-1 font-medium title-font">Contact Us</h2>
-        <p class="leading-relaxed mb-5 text-gray-600">We value your feedback and are here to answer any
-          questions
-          you may have. Please feel free to reach out to us using the contact information provided below or by
-          filling out the contact form.
-        </p>
+      <div class="feedback-section">
+        <h2>Contact Us</h2>
+        <p>{{greetings}}</p>
 
         <app-form-field label="Name" [control]="getFormControl('fullname')" controlName="fullname"></app-form-field>
         <app-form-field label="Phone" [control]="getFormControl('phone')" controlName="phone"></app-form-field>
         <app-form-field label="Email" [control]="getFormControl('email')" controlName="email"></app-form-field>
         <div class="relative mb-4">
-          <label for="message" class="leading-7 text-sm text-gray-600">Message</label>
-          <textarea id="message" name="message" formControlName="message"
-            class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea>
+          <label for="message">Message</label>
+          <textarea id="message" name="message" formControlName="message"></textarea>
         </div>
 
-        <app-submit-button [isLoading]="isSubmitting" (click)="save()" [label]="'Save'" [isDisabled]="form.invalid"></app-submit-button>
+        <app-submit-button
+            [isLoading]="isSubmitting"
+            (click)="save()"
+            [label]="'Save'"
+            [isDisabled]="form.invalid">
+        </app-submit-button>
       </div>
     </form>
   </div>
