--- a/src/app/modules/home/components/contact-section/contact-section.component.scss
+++ b/src/app/modules/home/components/contact-section/contact-section.component.scss
@@ -7,3 +7,35 @@
 	border-left-color: transparent;
 	border-right-color: transparent;
 }
+
+section {
+	@apply text-gray-600 relative;
+
+	.maps-wrapper {
+		@apply absolute inset-0 bg-gray-300;
+	}
+
+	.form-wrapper {
+		@apply container px-5 py-24 mx-auto flex;
+
+		.feedback-section {
+			@apply lg:w-1/3 md:w-1/2 bg-white rounded-lg p-8 flex flex-col md:ml-auto w-full mt-10 md:mt-0 relative z-10 shadow-md;
+
+			h2 {
+				@apply text-gray-900 text-lg mb-1 font-medium;
+			}
+
+			p {
+				@apply leading-relaxed mb-5 text-gray-600;
+			}
+
+			label {
+				@apply leading-7 text-sm text-gray-600;
+			}
+
+			textarea {
+				@apply w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out;
+			}
+		}
+	}
+}
