--- a/src/app/modules/profile/profile-view/profile.component.html
+++ b/src/app/modules/profile/profile-view/profile.component.html
@@ -38,10 +38,7 @@
                 <span>{{ user.address.provinces | capitalize }}</span>
               </div>
               <div class="mb-2 text-gray-600 mt-10">
-                <i class="fas fa-briefcase mr-2 text-lg text-gray-400"></i>Solution Manager - Creative Tim Officer
-              </div>
-              <div class="mb-2 text-gray-600">
-                <i class="fas fa-university mr-2 text-lg text-gray-400"></i>University of Computer Science
+                <span>{{user.occupation}} - {{user.company}}</span>
               </div>
             </div>
             <div class="mt-10 py-10 border-t border-gray-200 text-center">
