--- a/src/app/shared/components/card-blog/card-blog.component.html
+++ b/src/app/shared/components/card-blog/card-blog.component.html
@@ -1,55 +1,35 @@
-<div class="rounded overflow-hidden shadow-lg flex flex-col">
+<a [routerLink]="['/blog-detail', article._id]" class="card-blog">
   <div class="relative">
-    <a href="#">
-      <img class="w-full"
-        src="https://images.pexels.com/photos/61180/pexels-photo-61180.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=1&amp;w=500"
-        alt="Sunset in the mountains">
-      <div
-        class="hover:bg-transparent transition duration-300 absolute bottom-0 top-0 right-0 left-0 bg-gray-900 opacity-25">
-      </div>
-    </a>
-    <a href="#!">
-      <div
-        class="text-xs absolute top-0 right-0 bg-green-600 px-4 py-2 text-white mt-3 mr-3 hover:bg-white hover:text-green-600 transition duration-500 ease-in-out">
-        Cooking
-      </div>
-    </a>
+    <img class="images" [lazyLoad]="article.images.url" alt="Article Images" />
+    <div class="on-hover">
+    </div>
+    <div class="category">
+      {{article.category.name}}
+    </div>
   </div>
   <div class="px-6 py-4 mb-auto">
-    <a href="#" class="font-medium text-lg inline-block hover:text-indigo-600 transition duration-500 ease-in-out mb-2">
-      Simplest
-      Salad Recipe ever
-    </a>
+    <span class="title">
+      {{article.title | shortenerText: 20 }}
+    </span>
 
     <div class="relative inline-block">
-      <p class="text-gray-500 text-sm focus:outline-none cursor-pointer" (mouseenter)="showTooltip()" (mouseleave)="hideTooltip()">
-        {{ word | shortenerText: 20 }}
+      <p class="subtitle" (mouseenter)="showTooltip()" (mouseleave)="hideTooltip()">
+        {{ article.subtitle | shortenerText: 80 }}
       </p>
-      <app-tooltip [flag]="!showTooltipFlag" [text]="word"></app-tooltip>
+      <app-tooltip [flag]="!showTooltipFlag" [text]="article.subtitle"></app-tooltip>
     </div>
-
   </div>
-  <div class="px-6 py-3 flex flex-row items-center justify-between bg-gray-100">
-    <span href="#" class="py-1 text-xs font-regular text-gray-900 mr-1 flex flex-row items-center">
-      <svg height="13px" width="13px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
-        style="enable-background:new 0 0 512 512;" xml:space="preserve">
-        <g>
-          <g>
-            <path
-              d="M256,0C114.837,0,0,114.837,0,256s114.837,256,256,256s256-114.837,256-256S397.163,0,256,0z M277.333,256 c0,11.797-9.536,21.333-21.333,21.333h-85.333c-11.797,0-21.333-9.536-21.333-21.333s9.536-21.333,21.333-21.333h64v-128 c0-11.797,9.536-21.333,21.333-21.333s21.333,9.536,21.333,21.333V256z">
-            </path>
-          </g>
-        </g>
-      </svg>
-      <span class="ml-1">6 mins ago</span>
+  <div class="content">
+    <span class="time-wrapper">
+      <img [src]="iconTime" alt="time" class="h-5 w-5" />
+      <span class="ml-1">{{article.createdAt | timeAgo }}</span>
     </span>
-    <span href="#" class="py-1 text-xs font-regular text-gray-900 mr-1 flex flex-row items-center">
+    <!-- <span class="py-1 text-xs font-regular text-gray-900 mr-1 flex flex-row items-center">
       <svg class="h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
           d="M7 8h10M7 12h4m1 8l-4-4H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-3l-4 4z"></path>
       </svg>
       <span class="ml-1">39 Comments</span>
-    </span>
+    </span> -->
   </div>
-</div>
+</a>
