--- a/src/app/shared/components/tooltip/tooltip.component.html
+++ b/src/app/shared/components/tooltip/tooltip.component.html
@@ -1,3 +1,3 @@
-<div class="tooltip bg-gray-800 text-white text-sm rounded py-1 px-2 -mt-2 absolute z-10" [class.hidden]="flag">
+<div class="tooltip bg-gray-800 text-white text-sm rounded py-1 px-2 -mt-2 absolute" [class.hidden]="flag">
   {{ text }}
 </div>
