--- a/src/app/shared/components/author/author.component.html
+++ b/src/app/shared/components/author/author.component.html
@@ -1,14 +1,14 @@
 <div class="flex py-5">
 	<img
 		class="rounded-full"
-		[lazyLoad]="author?.avatar?.url!"
+		[lazyLoad]="author.avatar.url"
 		alt="Avatar"
 		width="50"
 		height="50" />
 	<div class="flex flex-col justify-center px-4">
 		<span
 			class="text-md font-bold text-[#213a5c] hover:text-gray-600 capitalize">
-			{{ author?.username }}
+			{{ author.username }}
 		</span>
 	</div>
 </div>
