--- a/src/app/modules/profile/profile-view/profile.component.html
+++ b/src/app/modules/profile/profile-view/profile.component.html
@@ -32,10 +32,7 @@
                 {{ user.username }}
               </h3>
               <div class="address">
-                <span>{{ user.address.villages | capitalize }},</span>
-                <span>{{ user.address.districts | capitalize }},</span>
-                <span>{{ user.address.regencies | capitalize }},</span>
-                <span>{{ user.address.provinces | capitalize }}</span>
+                <span>{{address}}</span>
               </div>
               <div class="mb-2 text-gray-600 mt-10">
                 <span>{{user.occupation}} - {{user.company}}</span>
