--- a/src/app/modules/project/components/project-detail-dialog/project-detail-dialog.component.html
+++ b/src/app/modules/project/components/project-detail-dialog/project-detail-dialog.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<!-- <div class="wrapper">
   <figure>
     <img [src]="project.images" alt="image description">
     <figcaption>{{project.title}}</figcaption>
@@ -6,4 +6,4 @@
   <span>{{project.description}}</span>
   <hr>
   <button type="button" (click)="dialogRef.close()">Close</button>
-</div>
+</div> -->
