--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,9 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
+
 * {
 	font-family: 'Poppins', sans-serif;
 }
