ref: change field using input text component

--- a/src/app/modules/authentication/login/login.component.html
+++ b/src/app/modules/authentication/login/login.component.html
@@ -1,34 +1,30 @@
 <section class="bg-gray-200">
-  <div class="flex justify-center min-h-screen">
-    <div class="flex items-center w-full max-w-3xl p-8 mx-auto lg:px-12 lg:w-2/5">
+  <div class="login-form">
+    <div class="wrapper">
       <div class="w-full">
-        <div class="flex justify-center flex-col space-y-2 mb-4">
+        <div class="mb-4">
           <div class="flex justify-center mb-4">
             <app-brand-logo [height]="100" [width]="100"></app-brand-logo>
           </div>
-          <p class="text-[#213a5c] text-base font-semibold text-center">
-            Welcome to Indobata, Please log in to access exclusive features and information.
+          <p class="header">
+            {{ greetings }}
           </p>
         </div>
-
-        <!-- Forms here -->
         <form [formGroup]="form">
-          <app-form-field label="Email" [control]="getFormControl('email')" controlName="email"></app-form-field>
-
-          <app-form-field label="Password" [control]="getFormControl('password')" controlName="password">
-          </app-form-field>
-          <app-form-field label="Confirm Password" [control]="getFormControl('confirmPassword')" controlName="confirmPassword">
-          </app-form-field>
-          <app-submit-button [isLoading]="isSubmitting" (click)="onLoginProcess()" [label]="'Login'" [isDisabled]="form.invalid">
+          <app-input-text label="Email" fieldName="email" [formGroup]="form"></app-input-text>
+          <app-input-text label="Password" fieldName="password" [formGroup]="form"></app-input-text>
+          <app-input-text label="Confirm Password" fieldName="confirmPassword" [formGroup]="form"></app-input-text>
+          <app-submit-button [isLoading]="isSubmitting" (click)="onLoginProcess()" [label]="'Login'"
+            [isDisabled]="form.invalid">
           </app-submit-button>
         </form>
-        <p class="mt-6 text-sm text-center text-gray-400">
-          If you are new here, please <a routerLink="/register" class="underline text-[#213a5c] font-semibold">
+        <p class="messages">
+          If you are new here, please <a routerLink="/register">
             create an account
           </a> to enjoy our services.
         </p>
       </div>
     </div>
-    <img class="hidden bg-cover lg:block lg:w-2/3" [lazyLoad]='bgCover' />
+    <img class="cover" [lazyLoad]='cover' />
   </div>
 </section>
