--- a/src/app/shared/components/dropdown/dropdown.component.html
+++ b/src/app/shared/components/dropdown/dropdown.component.html
@@ -1,4 +1,4 @@
-<div class="py-4">
+<div class="pb-4">
   <label id="listbox-label" class="label">{{label}}</label>
   <div class="relative mt-2">
     <button type="button" class="dropdown" (click)="toggleDropdown()">
