--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,32 +8,50 @@
 @import 'primeng/resources/primeng.css';
 
 * {
-	font-family: 'Poppins', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 ::-webkit-scrollbar {
-	width: 9px;
+  width: 9px;
 }
 
 ::-webkit-scrollbar-track {
-	background: transparent;
+  background: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
-	background-color: #5d6064;
-	border-radius: 20px;
-	border: transparent;
+  background-color: #5d6064;
+  border-radius: 20px;
+  border: transparent;
 }
 
 .icon-gray {
-	filter: invert(48%) sepia(6%) saturate(856%) hue-rotate(182deg) brightness(91%) contrast(93%);
+  filter: invert(48%) sepia(6%) saturate(856%) hue-rotate(182deg) brightness(91%) contrast(93%);
 }
 
 html,
 body {
-	height: 100%;
+  height: 100%;
 }
 
 body {
-	margin: 0;
+  margin: 0;
+}
+
+.error-message {
+  @apply text-[#FF0000] text-xs mt-1;
+}
+
+.p-float-label input:focus~label,
+.p-float-label input.p-filled~label,
+.p-float-label textarea:focus~label,
+.p-float-label textarea.p-filled~label,
+.p-float-label .p-inputwrapper-focus~label,
+.p-float-label .p-inputwrapper-filled~label {
+  top: -1rem;
+  left: 0;
+  font-weight: 700;
+  font-size: 13px;
+  line-height: 1.5rem;
+  color: rgb(2 6 23);
 }
