--- a/src/app/shared/components/input-textarea/input-textarea.component.scss
+++ b/src/app/shared/components/input-textarea/input-textarea.component.scss
@@ -1,6 +1,7 @@
 :host ::ng-deep {
   .p-inputtext.ng-dirty.ng-invalid {
     border: 2px solid red;
+    border-radius: 14px;
   }
 
   .p-inputtext {
