--- a/src/app/shared/components/input-number/input-number.component.scss
+++ b/src/app/shared/components/input-number/input-number.component.scss
@@ -1,6 +1,29 @@
 :host ::ng-deep {
+
+  .p-inputmask.ng-dirty.ng-invalid {
+    border: 2px solid red;
+  }
+
   .p-inputtext {
-    margin: 0;
+    border-radius: 15px;
     width: 100%;
-}
+  }
+
+  p-inputmask.ng-dirty.ng-invalid > .p-inputtext {
+    border: 2px solid red;
+  }
+
+  p-inputmask.p-input-filled {
+    border: 2px solid blue;
+  }
+
+
+  .p-float-label label {
+    left: 0.75rem;
+    transition-duration: 0.2s;
+  }
+
+  .p-float-label.ng-dirty.ng-invalid label {
+    color: red;
+  }
 }
