--- a/src/app/shared/components/spinner/spinner.component.html
+++ b/src/app/shared/components/spinner/spinner.component.html
@@ -1,1 +1,12 @@
-<span *ngIf="loadingIndicator" class="loader"></span>
+<div *ngIf="loadingIndicator">
+  <div class="position-fixed w-100 h-100 text-center loading positions">
+    <svg width="205" height="250" viewBox="0 0 40 50">
+      <polygon
+        stroke="#778899"
+        strokeWidth="1"
+        fill="none"
+        points="20,1 40,40 1,40" />
+      <text fill="#778899" x="9" y="47">Loading</text>
+    </svg>
+  </div>
+</div>
