--- a/src/app/shared/components/card-shimmer-effect/card-shimmer-effect.component.scss
+++ b/src/app/shared/components/card-shimmer-effect/card-shimmer-effect.component.scss
@@ -1,73 +1,72 @@
 .card {
-  position: relative;
-  -webkit-box-shadow: 0 6px 8px rgba(0, 0, 0, 0.1);
-  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.1);
-  background-color: #FFF;
-  border-radius: 6px;
-  height: 500px;
-  overflow: hidden;
-  width: 350px;
-  margin: 40px auto;
+	position: relative;
+	-webkit-box-shadow: 0 6px 8px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 6px 8px rgba(0, 0, 0, 0.1);
+	background-color: #fff;
+	border-radius: 6px;
+	height: 500px;
+	overflow: hidden;
+	width: 350px;
+	margin: 40px auto;
 
-  .shimmer {
-    animation-duration: 2.2s;
-    animation-fill-mode: forwards;
-    animation-iteration-count: infinite;
-    animation-name: shimmer;
-    animation-timing-function: linear;
-    background: #ddd;
-    background: linear-gradient(to right, #F6F6F6 8%, #F0F0F0 18%, #F6F6F6 33%);
-    background-size: 1200px 100%;
-  }
+	.shimmer {
+		animation-duration: 2.2s;
+		animation-fill-mode: forwards;
+		animation-iteration-count: infinite;
+		animation-name: shimmer;
+		animation-timing-function: linear;
+		background: #ddd;
+		background: linear-gradient(to right, #f6f6f6 8%, #f0f0f0 18%, #f6f6f6 33%);
+		background-size: 1200px 100%;
+	}
 
+	@-webkit-keyframes shimmer {
+		0% {
+			background-position: -100% 0;
+		}
 
-  @-webkit-keyframes shimmer {
-    0% {
-      background-position: -100% 0;
-    }
+		100% {
+			background-position: 100% 0;
+		}
+	}
 
-    100% {
-      background-position: 100% 0;
-    }
-  }
+	@keyframes shimmer {
+		0% {
+			background-position: -1200px 0;
+		}
 
-  @keyframes shimmer {
-    0% {
-      background-position: -1200px 0;
-    }
+		100% {
+			background-position: 1200px 0;
+		}
+	}
 
-    100% {
-      background-position: 1200px 0;
-    }
-  }
+	.media {
+		height: 200px;
+	}
 
-  .media {
-    height: 200px;
-  }
+	.p-32 {
+		padding: 32px;
+	}
 
-  .p-32 {
-    padding: 32px;
-  }
+	.title-line {
+		height: 24px;
+		width: 100%;
+		margin-bottom: 12px;
+		border-radius: 20px;
+	}
 
-  .title-line {
-    height: 24px;
-    width: 100%;
-    margin-bottom: 12px;
-    border-radius: 20px;
-  }
+	.content-line {
+		height: 8px;
+		width: 100%;
+		margin-bottom: 16px;
+		border-radius: 8px;
+	}
 
-  .content-line {
-    height: 8px;
-    width: 100%;
-    margin-bottom: 16px;
-    border-radius: 8px;
-  }
-
-  .end {
-    width: 40%;
-  }
+	.end {
+		width: 40%;
+	}
 }
 
 .m-t-24 {
-  margin-top: 24px;
+	margin-top: 24px;
 }
