--- a/src/app/shared/components/editor/editor.component.scss
+++ b/src/app/shared/components/editor/editor.component.scss
@@ -1,10 +1,14 @@
 :host ::ng-deep {
 	.p-inputtext.ng-dirty.ng-invalid {
 		border: 2px solid red;
-		animation: blinker 1s linear infinite;
 	}
 
 	.p-inputtext {
 		border-radius: 15px;
+	}
+
+	.p-invalid .ql-container {
+		border: 3px solid red;
+		animation: blinker 1s linear infinite;
 	}
 }
